# rustile

./: Cargo.toml  README.md
.github/workflows/: rust.yml
database/: Cargo.toml
database/migrations/2021-12-23-142004_init_database/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs  user.rs
git-lfs-authenticate/: Cargo.toml
git-lfs-authenticate/src/: main.rs
git-lfs-authenticate/src/warnings/: ssh_not_configured.txt
git-server/: Cargo.toml
git-server/src/: handlers.rs  main.rs  middleware.rs  templates.rs
git-server/src/handlers/: lfs.rs  mod.rs  views.rs
git-server/templates/: _base.html  _git_base.html  file_browser.html  git_blob_page.html  git_tree_page.html  index.html
