[package]
edition = "2021"
name = "git-lfs-authenticate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.0.0-rc.7", features = ["derive"]}
database = {path = "../database"}
diesel = {version = "1.4", features = ["mysql", "chrono"]}
dotenv = "0.15.0"
jsonwebtoken = "7.2"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
