[package]
edition = "2021"
name = "git-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"]}
askama = "0.10"
askama_actix = "0.11"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["mysql", "chrono"]}
env_logger = "0.9"
futures = "0.3"
git2 = "0.13"
lazy_static = "1.4"
regex = "1"
rust-s3 = "0.28"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
